--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_THREAD_PREFER_PTHREAD ON)                                                                                                                                                                                                           
-set(THREADS_PREFER_PTHREAD_FLAG ON)                                                                                                                                                                                                           
+set(THREADS_PREFER_PTHREAD_FLAG ON)   
+set(CMAKE_EXE_LINKER_FLAGS "-pthread")                                                                                                                                                                                                        
 find_package(Threads REQUIRED)
 
 add_executable(NetMessage main.cpp netmessenger.h netmessenger.cpp
